--- a/crates/renderdog/Cargo.toml
+++ b/crates/renderdog/Cargo.toml
@@ -6,7 +6,7 @@ license.workspace = true
 repository.workspace = true
 homepage.workspace = true
 authors.workspace = true
-readme = "../../README.md"
+readme = "README.md"
 description = "RenderDoc in-application API wrapper + automation helpers + an MCP server."
 keywords = ["renderdoc", "graphics", "debugging", "mcp"]
 categories = ["api-bindings", "development-tools::debugging", "graphics"]
