--- a/crates/renderdog-replay/Cargo.toml
+++ b/crates/renderdog-replay/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "renderdog-replay-experimental"
+name = "renderdog-replay"
 edition.workspace = true
 version.workspace = true
 license.workspace = true
@@ -11,17 +11,17 @@ publish = false
 description = "Experimental RenderDoc replay bindings (C++/cxx). Not for crates.io yet."
 
 [dependencies]
-cxx = { version = "1.0", optional = true }
+cxx = "1.0"
 thiserror = "2"
 anyhow = "1"
 
 [build-dependencies]
-cxx-build = { version = "1.0", optional = true }
+cxx-build = "1.0"
 
 [features]
 default = []
 # Enable building the C++ shim and calling RenderDoc's replay API (experimental).
-cxx-replay = ["dep:cxx", "dep:cxx-build"]
+cxx-replay = []
 
 [[example]]
 name = "replay_pick_pixel"
