--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,8 @@
 *.json text eol=lf
 *.py   text eol=lf
 *.sh   text eol=lf
+*.gitattributes text eol=lf
+/.gitattributes text eol=lf
 
 # Windows scripts
 *.ps1  text eol=crlf
